--- a/CSS/0-helpers/_variables.scss
+++ b/CSS/0-helpers/_variables.scss
@@ -6,7 +6,29 @@ $cCafe-5: #a67a62;
 $cBrown-6: #9d6541;
 $cChestnut-7: #864f39;
 $cUmber-8: #5a473c;
+
 $cBlue: #2a283f;
+
+
+$colorBg-1: #2a283f;
+
+$colorBg-2: #d0baa7;
+
+$colorText-1: #f1ead4;
+
+$colorText-2: #2a283f;
+
+$color-h: #926c4b;
+
+$hlColor-1_1: #926c4b;
+$hlColor-1_2: #eee6c6;
+
+$hlColor-1_1: #c3a082;
+$hlColor-1_2: #eee6c6;
+
+$hlColor-2_1: #864f39ff;
+$hlColor-2_2: #a67a62ff;
+
 
 @font-face {
   font-family: forum;
