--- a/CSS/2-base/_body.scss
+++ b/CSS/2-base/_body.scss
@@ -68,7 +68,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: $cCafe-5;
+  color: $color-h;
   font-family: forum;
   font-weight: 1000;
 
@@ -103,11 +103,6 @@ h5 {
 
 h6 {
   font-size: 1rem;
-}
-
-
-.egg--p {
-  color: $cEgg-1;
 }
 
 .text--shadow {
