--- a/CSS/2-base/_footer.scss
+++ b/CSS/2-base/_footer.scss
@@ -1,6 +1,6 @@
 footer {
   position: relative;
-  background: $cSand-3 linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+  background: $colorBg-2 linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
   box-shadow: inset 0 5px 10px 2px;
   height: fit-content;
   padding-top: 1.5rem;
@@ -14,7 +14,7 @@ footer {
   }
 
   a {
-    @include anchor($cBlue, $cWhiteD-2);
+    @include anchor($hlColor-2_1, $hlColor-2_2);
     font-size: 1.2em;
   }
 
@@ -33,7 +33,7 @@ footer {
   }
 
   .footer__grid {
-    color: $cBlue;
+    color: $colorText-2;
     display: flex;
     flex-direction: column;
 
@@ -63,7 +63,7 @@ footer {
       padding: 0;
 
       position: relative;
-      color: $cBlue;
+      color: $colorText-2;
       align-items: center;
       margin: 0em auto;
 
@@ -98,7 +98,7 @@ footer {
       line-height: 1.5em;
       margin: 4rem auto 1rem auto;
       text-align: center;
-      color: $cBlue;
+      color: $colorText-2;
     }
 
     address {
@@ -120,7 +120,7 @@ footer {
       }
 
       a {
-        @include anchor($cBlue, $cWhiteD-2);
+        @include anchor($hlColor-2_1, $hlColor-2_2);
         padding: 0;
         margin: 0;
       }
@@ -131,7 +131,7 @@ footer {
         flex-direction: column;
         margin: 0;
         padding: 0;
-        color: $cBlue;
+        color: $colorText-2;
 
         li {
           margin-bottom: .5em;
