--- a/CSS/2-base/_footer.scss
+++ b/CSS/2-base/_footer.scss
@@ -85,10 +85,10 @@ footer {
           content: "";
           position: absolute;
           background: rgba(0, 0, 0, 0.4);
-          // width: 30vw;
+          min-width: 100%;
+          max-width: calc(100% + 50px);
           height: 1px;
-          left: -100px;
-          right: -100px;
+          left: 0;
           margin: -1.5rem auto;
           bottom: -1rem;
         }
