--- a/CSS/3-queries/_querie-790.scss
+++ b/CSS/3-queries/_querie-790.scss
@@ -15,3 +15,16 @@
     display: none;
   }
 }
+
+@media (max-width: 500px) {
+  #header--img {
+    display: none;
+  }
+
+  .footer--gkg--sm {
+    &::after {
+      max-width: 100%;
+
+    }
+  }
+}
