--- a/CSS/0-helpers/_variables.scss
+++ b/CSS/0-helpers/_variables.scss
@@ -11,17 +11,15 @@ $cBlue: #2a283f;
 
 
 $colorBg-1: #2a283f;
-
 $colorBg-2: #d0baa7;
 
-$colorText-1: #f1ead4;
+$color-h: #a67a62;
 
+$colorText-1: #f1ead4;
 $colorText-2: #2a283f;
 
-$color-h: #926c4b;
-
-$hlColor-1_1: #926c4b;
-$hlColor-1_2: #eee6c6;
+$hlColor-1_2: #926c4b;
+$hlColor-1_1: #eee6c6;
 
 $hlColor-1_1: #c3a082;
 $hlColor-1_2: #eee6c6;
