--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -96,10 +96,11 @@
 
 // AGENTS 
 #about--section {
+
   .agents {
     display: flex;
     gap: 1em;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     justify-content: space-evenly;
     text-align: center;
     font-size: 1.5rem;
@@ -122,6 +123,10 @@
       }
     }
 
+    .bio--svg {
+      display: none;
+    }
+
     .bio {
       @include shadow--container();
       border-radius: 20px;
@@ -135,12 +140,12 @@
       align-items: center;
 
       box-sizing: border-box;
-      border-radius: 20px;
       z-index: -1;
       // position: sticky;
       position: relative;
       // top: 0;
       bottom: 0;
+
     }
   }
 }
@@ -167,7 +172,7 @@
       }
 
       .why--us--box--p {
-        @include shadow--container($width: 500px, $height:150px, $border-radius: 10px);
+        @include shadow--container($width: 300px, $height:150px, $border-radius: 10px);
         @include card--shadow--small;
         position: relative;
         font-size: 1.5rem;
@@ -179,9 +184,6 @@
         justify-content: center;
         align-items: center;
         align-self: bottom;
-
-        p {}
-
       }
     }
   }
@@ -357,8 +359,7 @@
         border-radius: 20px;
         z-index: -1;
 
-        transition:
-          padding-bottom 150ms ease-in-out,
+        transition: padding-bottom 150ms ease-in-out,
           box-shadow 150ms ease-in-out;
 
         &::after {
