--- a/CSS/2-base/_footer.scss
+++ b/CSS/2-base/_footer.scss
@@ -6,6 +6,14 @@ footer {
   padding-top: 1.5rem;
   margin-top: 200px;
 
+  h2 {
+    font-size: 5rem;
+    margin: -1em auto 0em;
+    font-weight: 1000;
+    color: $colorText-2;
+    letter-spacing: -2px;
+  }
+
   h3 {
     font-size: 2.8rem;
     margin-bottom: -.8em;
@@ -37,11 +45,7 @@ footer {
     display: flex;
     flex-direction: column;
 
-    h2 {
-      font-size: 5rem;
-      margin: -1em auto 0em auto;
-      font-weight: 1000;
-    }
+
 
     #footer__addresses {
       margin: 0em auto 2em auto;
@@ -52,6 +56,8 @@ footer {
       justify-content: center;
       font-size: 1rem;
       padding: 0;
+      color: $colorText-2;
+
     }
 
 
