--- a/CSS/2-base/_nav.scss
+++ b/CSS/2-base/_nav.scss
@@ -6,7 +6,7 @@
   display: inline-flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  justify-content: space-between;
+  // justify-content: space-between;
   box-shadow: 0px 5px 10px 0px black;
   top: 0;
   color: $colorText-1;
@@ -17,6 +17,12 @@
   a {
     @include anchor();
     margin-right: 1em;
+  }
+
+  #upper--nav--phones {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
   }
 }
 
