--- a/CSS/3-queries/_querie-790.scss
+++ b/CSS/3-queries/_querie-790.scss
@@ -1,30 +1,63 @@
-@media (max-width: 1230px) {
-  .header--disp--ptn {
-    grid-template-columns: 20% auto auto 20%;
-  }
-}
-
-@media (max-width: 1000px) {
-  .header--disp--ptn {
-    grid-template-columns: 10% auto auto 10%;
-  }
-}
-
-@media (max-width: 830px) {
-  #header--img {
+@media screen and (max-width: 1240px) {
+  #bottom--nav {
     display: none;
   }
 }
 
-@media (max-width: 500px) {
+@media screen and (max-width: 940px) {
   #header--img {
     display: none;
   }
 
-  .footer--gkg--sm {
-    &::after {
-      max-width: 100%;
-
+  header {
+    .rr--logo {
+      bottom: 6.8rem;
+      right: 0;
+      left: 0;
+      margin-right: auto;
+      margin-left: auto;
     }
   }
+}
+
+@media screen and (max-width: 890px) {
+  .agents {
+    flex-wrap: wrap;
+  }
+
+
+}
+
+@media screen and (max-width: 666px) {
+  #upper--nav {
+    #upper--nav--phones {
+      flex-direction: column;
+    }
+
+    em {
+      margin: auto auto auto 0;
+    }
+  }
+
+  #top--nav {
+    top: 70px;
+
+    .ddm {
+      display: none;
+    }
+  }
+
+  footer {
+    h2 {
+      margin: -1em auto 0em;
+
+    }
+
+    .footer--gkg--sm {
+      &::after {
+        // max-width: 100%;
+      }
+    }
+  }
+
 }
