--- a/CSS/2-base/_footer.scss
+++ b/CSS/2-base/_footer.scss
@@ -26,19 +26,19 @@ footer {
     font-size: 1.2em;
   }
 
-  .footer__img {
-    position: absolute;
-    top: 20em;
-    left: 4em;
-  }
+  // .footer__img {
+  //   position: absolute;
+  //   top: 20em;
+  //   left: 4em;
+  // }
 
-  .footer__gkg {
-    position: absolute;
-    font-weight: bolder;
-    font-size: 6em;
-    top: .5em;
-    right: 0.5em;
-  }
+  // .footer__gkg {
+  //   position: absolute;
+  //   font-weight: bolder;
+  //   font-size: 6em;
+  //   top: .5em;
+  //   right: 0.5em;
+  // }
 
   .footer__grid {
     color: $colorText-2;
@@ -53,11 +53,13 @@ footer {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
       font-size: 1rem;
-      padding: 0;
+      padding-left: 5em;
       color: $colorText-2;
 
+      .footer--maria {}
+
+      .footer--paula {}
     }
 
 
