--- a/CSS/3-queries/_querie-790.scss
+++ b/CSS/3-queries/_querie-790.scss
@@ -47,6 +47,13 @@
     }
   }
 
+  // .why--us--box--h3 {
+  //   font-size: 1em;
+  // }
+  .content {
+    margin-left: -10px;
+  }
+
   footer {
     h2 {
       margin: -1em auto 0em;
