--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -60,7 +60,7 @@ body footer {
       grid-template-rows: repeat(6, max-content);
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-      grid-template-areas: "upper--nav" "header" "top--nav" "main" "bottom--nav" "footer";
+      grid-template-areas: "upper--nav" " header " " top--nav " " main " " bottom--nav " " footer ";
 }
 
 main {
@@ -738,6 +738,7 @@ section {
   -ms-grid-column-span: 1;
   grid-column: 2/3;
   justify-items: center;
+  margin: auto;
 }
 
 .content p {
@@ -1062,7 +1063,7 @@ section {
   display: grid;
   -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-gap: 1rem;
+  grid-gap: 1em;
 }
 
 #why--us--section .why--us .why--us--box {
@@ -1077,6 +1078,11 @@ section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  margin: auto;
 }
 
 #why--us--section .why--us .why--us--box .why--us--box--h3 {
@@ -1084,9 +1090,8 @@ section {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  margin: auto;
   text-align: center;
-  font-size: 3rem;
+  font-size: 3em;
 }
 
 #why--us--section .why--us .why--us--box .why--us--box--p {
@@ -1807,6 +1812,9 @@ img {
   }
   #top--nav .ddm {
     display: none;
+  }
+  .content {
+    margin-left: -10px;
   }
   footer h2 {
     margin: -1em auto 0em;
